--- a/mr-jobs/views/empleo/buscar.ejs
+++ b/mr-jobs/views/empleo/buscar.ejs
@@ -20,7 +20,7 @@
                         </div>
                         <div class="col-5 input-group">
                                 <input type="text" class="form-control border-1"
-                                       placeholder="Ciudad provincia, ciudad o país" name="segundoCriterioBusqueda"
+                                       placeholder="Buscar por ciudad, provincia, o país" name="segundoCriterioBusqueda"
                                        value="<%=existeSegundoCriterio ? segundoCriterioBusqueda: ''%>">
                         </div>
                         <div class="col-2 input-group">
