--- a/mr-jobs/views/empleo/buscar.ejs
+++ b/mr-jobs/views/empleo/buscar.ejs
@@ -44,7 +44,7 @@
                         <%if(empleos.length > 0){%>
                         <% empleos.forEach((empleo) =>{%>
                         <div class="col-md-4">
-                            <a class="a-no-underline" href="/empleo/publicacion/<%=empleo["id"]%>">
+                            <a class="a-no-underline" href="/aplicacion/aplicar/<%=empleo["id"]%>">
                                 <div class="card mb-4 shadow-sm border-1">
                                     <div class="card-body">
                                         <p class="card-text card-text-title m-0"><%=empleo["nombreEmpleo"]%></p>
