Boton cancelar en formularios

--- a/mr-jobs/views/aplicacion/solicitud.ejs
+++ b/mr-jobs/views/aplicacion/solicitud.ejs
@@ -104,8 +104,10 @@
                             <div class="row pt-2">
                                 <div class="col-2"></div>
                                 <div class="col-4">
-                                    <a href="/aplicacion/aplicar/<%=idEmpleo%>"><button type="button"
-                                                       class="btn btn-danger btn-home-buscar-empleo btn-block ">Cancelar</button></a>
+                                    <a href="/aplicacion/aplicar/<%=idEmpleo%>" class="a-no-underline">
+                                        <button type="button"
+                                                       class="btn btn-danger btn-home-buscar-empleo btn-block ">Cancelar</button>
+                                    </a>
                                 </div>
                                 <div class="col-4">
                                     <button type="submit"
