--- a/mr-jobs/views/empleo/publicar.ejs
+++ b/mr-jobs/views/empleo/publicar.ejs
@@ -95,12 +95,18 @@
 <!--                        BOTON-->
                         <div class="text-center">
                             <div class="row pt-2">
-                                <div class="col-4"></div>
+                                <div class="col-2"></div>
+                                <div class="col-4">
+                                    <a href="/home/profile/<%=currentUser%>" class="a-no-underline">
+                                        <button type="button"
+                                                class="btn btn-danger btn-home-buscar-empleo btn-block ">Cancelar</button>
+                                    </a>
+                                </div>
                                 <div class="col-4">
                                     <button type="submit"
                                             class="btn btn-primary btn-home-buscar-empleo btn-block ">Enviar</button>
                                 </div>
-                                <div class="col-4"></div>
+                                <div class="col-2"></div>
                             </div>
                         </div>
                     </form>
