--- a/mr-jobs/views/usuario/profile.ejs
+++ b/mr-jobs/views/usuario/profile.ejs
@@ -13,7 +13,7 @@
                     <h3 class="dark-color"><%=currentProfile%></h3>
                     <h6 class="theme-color lead">Información del usuario</h6>
                     <p>Me llamo <%=usuario.nombre%> <%=usuario.apellido%></p>
-                    <p>Soy <%=trabajo.trabajo.nombre%> en <%=trabajo.trabajo.organizacion%>, <%=trabajo.trabajo.ubicacion%></p>
+                    <p>Soy <%=trabajo[0].trabajo.nombre%> en <%=trabajo[0].trabajo.organizacion%>, <%=trabajo[0].trabajo.ubicacion%></p>
                     <div class="row about-list">
                         <div class="col-md-6">
                             <div class="media">
@@ -41,6 +41,28 @@
             </div>
         </div>
         <br>
+    </div>
+    <div class="container profileBackground">
+        <div class="list-group">
+            <br>
+            <p class="tituloHome">Experiencia</p>
+            <%console.log(trabajo)%>
+            <% trabajo.forEach((value) =>{%>
+                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">Trabajo como <%=value.trabajo.nombre%></h5>
+                        <small>Agregar</small>
+                    </div>
+                    <p class="mb-1"> en <%=value.trabajo.organizacion%> - <%=value.trabajo.tipo%></p>
+                    <p class="mb-1"> desde: <%=value.anioInicio%> hasta: <%=value.anioFin%></p>
+                    <small>Lugar: <%=value.trabajo.ubicacion%></small>
+                </a>
+            <%})%>
+            <br>
+        </div>
+    </div>
+    <div class="container profileBackground">
+
     </div>
     <a href="/home/logout">
         <button class="btn-primary btn-dark">Cerrar sesión</button>
