--- a/mr-jobs/views/usuario/agregarTrabajo.ejs
+++ b/mr-jobs/views/usuario/agregarTrabajo.ejs
@@ -20,7 +20,7 @@
                 Error: <%= error%>
             </div>
         <%}%>
-        <form action="/home/crearDesdeVista"
+        <form action="/home/agregarTrabajoDesdeVista"
               method="POST">
             <div class="form-group">
                 <label for="empresaID">Empresa</label>
@@ -44,7 +44,7 @@
             <div class="form-group">
                 <label for="ubicacionID">Ubicacion</label>
                 <textarea class="form-control" id="ubicacionID" rows="3"
-                name = "ubicacion" placeholder="Ubicacion del trabajo"></textarea>
+                          name = "ubicacion" placeholder="Ubicacion del trabajo"></textarea>
             </div>
             <div class="form-group">
                 <label for="fechaInicioID">Fecha de inicio</label>
@@ -58,8 +58,6 @@
                        name="fechaFin" class="form-control"
                        placeholder="Fecha de fin del trabajo">
             </div>
-
-            <%- include('../compartido/hiddenLabels/usuarioLabels')%>
 
             <button type="submit" class="btn btn-primary">Registrarse</button>
             <button type="reset" class="btn btn-primary">limpiar</button>
