--- a/mr-jobs/views/usuario/profile.ejs
+++ b/mr-jobs/views/usuario/profile.ejs
@@ -47,11 +47,15 @@
             <br>
             <p class="tituloHome">Experiencia</p>
             <%console.log(trabajo)%>
-            <% trabajo.forEach((value) =>{%>
-                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
+            <%trabajo.forEach((value) =>{%>
+                <a class="list-group-item list-group-item-action flex-column align-items-start ">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">Trabajo como <%=value.trabajo.nombre%></h5>
-                        <small>Agregar</small>
+                        <small>
+                            <form method="POST" action="agregarTrabajo">
+                                <button class="btn-dark btn-info">Agregar</button>
+                            </form>
+                        </small>
                     </div>
                     <p class="mb-1"> en <%=value.trabajo.organizacion%> - <%=value.trabajo.tipo%></p>
                     <p class="mb-1"> desde: <%=value.anioInicio%> hasta: <%=value.anioFin%></p>
@@ -61,9 +65,7 @@
             <br>
         </div>
     </div>
-    <div class="container profileBackground">
-
-    </div>
+    <br>
     <a href="/home/logout">
         <button class="btn-primary btn-dark">Cerrar sesión</button>
     </a>
