--- a/mr-jobs/publico/css/estilos.css
+++ b/mr-jobs/publico/css/estilos.css
@@ -30,8 +30,9 @@ h1.formularioTitulo{
 
 .tituloHome{
     font-weight: bold;
-    font-size: 50px;
+    font-size: 30px;
     text-align: left;
+    color: #1d2124;
 }
 
 .subtituloHome{
@@ -229,7 +230,7 @@ mark {
 .profileBackground{
     color: #6F8BA4;
     margin-top:20px;
-    background-color: #fcf8e3;
+    background-color: white;
     border: 1px solid black
 }
 
@@ -255,4 +256,13 @@ mark {
 
 .btn-size-navbar{
     width: 200px;
+}
+.color-font-profile{
+    color: black;
+}
+
+.hr-card-empleo{
+    width: 100%;
+    background-color: #95999c;
+    margin-left: 0px;
 }
