--- a/mr-jobs/views/usuario/profile.ejs
+++ b/mr-jobs/views/usuario/profile.ejs
@@ -48,14 +48,13 @@
         <div class="list-group">
             <br>
             <p class="card-text-title tituloHome">Experiencia</p>
-            <%console.log(trabajo)%>
             <%trabajo.forEach((value) =>{%>
                 <a class="list-group-item list-group-item-action flex-column align-items-start border-1">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="color-font-profile mb-1">Trabajo como <%=value.trabajo.nombre%></h5>
                         <small>
                             <form method="POST" action="agregarTrabajo">
-                                <button class="btn-dark btn-info">Agregar</button>
+                                <button class="btn-primary btn">Agregar</button>
                             </form>
                         </small>
                     </div>
@@ -76,28 +75,40 @@
             <p class="card-text-title tituloHome">Empleos publicados</p>
 
 <!--            SI TIENE EMPLEOS PUBLICADOS -->
-            <a class="list-group-item list-group-item-action flex-column align-items-start border-1">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="color-font-profile mb-1">Nombre empleo</h5>
-                    <small>
-                        <form method="POST" action="agregarTrabajo">
-                            <button class="btn-primary">Agregar</button>
-                        </form>
-                    </small>
-                </div>
-                <p class="color-font-profile mb-1"> Nombre empresa</p>
-                <p class="color-font-profile mb-1"> Ubicacion</p>
-                <p class="color-font-profile mb-1"> Número de solicitudes</p>
-                <hr class="hr-card-empleo">
-                <small class="text-muted">Fecha publicacion</small>
-            </a>
-            <br>
-
+            <%if(empleos.length > 0){%>
+                <%for (let i = 0; i < empleos.length; i++) {%>
+                    <a class="list-group-item flex-column align-items-start border-1">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="color-font-profile mb-1"><%=empleos[i]["nombreEmpleo"]%></h5>
+                            <small>
+                                <form method="POST" action="">
+                                    <button class="btn-primary btn">Ver</button>
+                                </form>
+                            </small>
+                        </div>
+                        <p class="color-font-profile mb-1"><%=empleos[i]["nombreEmpresa"]%></p>
+                        <p class="color-font-profile mb-1"><%=empleos[i]["ubicacionEmpleo"]%></p>
+                        <p class="color-font-profile mb-1">
+                            <%=empleos[i]["numAplicaciones"]%>
+                            <%if(empleos[i]["numAplicaciones"]>1){%>
+                            Solicitudes
+                            <%}else{%>
+                            Solicitud
+                            <%}%>
+                        </p>
+                        <hr class="hr-card-empleo">
+                        <small class="text-muted"><%=empleos[i]["fechaPublicacion"]%></small>
+                    </a>
+                    <%if(i == (empleos.length-1)){%>
+                        <br>
+                    <%}%>
+                <%}%>
+            <%}else{%>
 <!--            SI NO TIENE EMPLEOS PUBLICADOS-->
             <div class="alert alert-info" role="alert">
                 No tiene empleos publicados
             </div>
-
+            <%}%>
 
         </div>
     </div>
