--- a/mr-jobs/views/usuario/profile.ejs
+++ b/mr-jobs/views/usuario/profile.ejs
@@ -54,7 +54,7 @@
                         <h5 class="color-font-profile mb-1">Trabajo como <%=value.trabajo.nombre%></h5>
                         <small>
                             <form method="POST" action="agregarTrabajo">
-                                <button class="btn-primary btn">Agregar</button>
+                                <button class="btn-info btn btn-size-profile">Agregar</button>
                             </form>
                         </small>
                     </div>
@@ -77,14 +77,16 @@
 <!--            SI TIENE EMPLEOS PUBLICADOS -->
             <%if(empleos.length > 0){%>
                 <%for (let i = 0; i < empleos.length; i++) {%>
-                    <a class="list-group-item flex-column align-items-start border-1">
+                    <span class="list-group-item flex-column align-items-start border-1">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="color-font-profile mb-1"><%=empleos[i]["nombreEmpleo"]%></h5>
+                            <%if(currentProfile == currentUser){%>
                             <small>
-                                <form method="POST" action="">
-                                    <button class="btn-primary btn">Ver</button>
-                                </form>
+                                <a href="/empleo/publicacion/<%=empleos[i]["idEmpleo"]%>">
+                                    <button class="btn-info btn btn-size-profile">Ver</button>
+                                </a>
                             </small>
+                            <%}%>
                         </div>
                         <p class="color-font-profile mb-1"><%=empleos[i]["nombreEmpresa"]%></p>
                         <p class="color-font-profile mb-1"><%=empleos[i]["ubicacionEmpleo"]%></p>
@@ -98,7 +100,7 @@
                         </p>
                         <hr class="hr-card-empleo">
                         <small class="text-muted"><%=empleos[i]["fechaPublicacion"]%></small>
-                    </a>
+                    </span>
                     <%if(i == (empleos.length-1)){%>
                         <br>
                     <%}%>
