--- a/mr-jobs/publico/css/estilos.css
+++ b/mr-jobs/publico/css/estilos.css
@@ -48,7 +48,7 @@ h1.formularioTitulo{
     border-style: solid;
     border-width: 2px;
     border-radius: 0%;
-    background-color: white;
+    background-color: #f8f9fa;
 }
 
 .jumbotron-titulo{
@@ -74,11 +74,7 @@ h1.formularioTitulo{
     border-radius: 0%;
 }
 
-.hr-card-empleo{
-    width: 25%;
-    background-color: black;
-    margin-left: 0px;
-}
+
 
 .card-text-title{
     font-weight: bold !important;
@@ -269,4 +265,48 @@ mark {
 
 .btn-size-profile{
     width: 100px;
+}
+
+.input-bg-light{
+    background-color: #f8f9fa;
+}
+
+.card-publicacion-titulo{
+    font-weight: bold !important;
+    font-size: 150%;
+    color: black;
+}
+
+.card-publicacion-subtitulo{
+    font-size: 150%;
+    color: black;
+}
+
+.card-publicacion{
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+}
+
+.hr-card-publicacion{
+    width: 100%;
+    background-color: #95999c;
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+.card-publicacion-titulo-aplicacion{
+    font-weight: bold;
+    font-size: 120%;
+    color: black;
+}
+
+.card-publicacion-subtitulo-aplicacion{
+    font-size: 120%;
+    color: black;
 }
