--- a/mr-jobs/views/empleo/buscar.ejs
+++ b/mr-jobs/views/empleo/buscar.ejs
@@ -8,13 +8,13 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron border-2">
-                <h1 class="display-4 jumbotron-titulo pb-4 ">Encuentra tu siguiente empleo</h1>
 
+            <div class="jumbotron border-2 bg-light">
+                <h1 class="display-4 jumbotron-titulo pb-4 ">Encuentra tu siguiente empleo</h1>
                 <form method="POST" action="/empleo/buscar">
                     <div class="form-row">
                         <div class="col-5 input-group">
-                            <input type="text" class="form-control border-1"
+                            <input type="text" class="form-control border-1 "
                                    placeholder="Buscar por cargo o empresa" name="primerCriterioBusqueda"
                                    value="<%=exitePrimerCriterio ? primerCriterioBusqueda: ''%>">
                         </div>
@@ -29,6 +29,7 @@
                     </div>
                 </form>
             </div>
+
         </div>
     </div>
 </div>
@@ -36,38 +37,40 @@
 <div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-12 ">
+
             <div class="container bg-light border-2">
-                    <div class="row p-4">
-                        <div class="col-12 pb-3">
-                            <span>Empleos más recientes</span>
-                        </div>
-                        <%if(empleos.length > 0){%>
-                        <% empleos.forEach((empleo) =>{%>
-                        <div class="col-md-4">
-                            <a class="a-no-underline" href="/aplicacion/aplicar/<%=empleo["id"]%>">
-                                <div class="card mb-4 shadow-sm border-1">
-                                    <div class="card-body">
-                                        <p class="card-text card-text-title m-0"><%=empleo["nombreEmpleo"]%></p>
-                                        <p class="card-text m-0"><%=empleo["nombreEmpresa"]%></p>
-                                        <p class="card-text m-0"><%=empleo["ubicacionEmpleo"]%></p>
-                                        <hr class="hr-card-empleo">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <small class="text-muted"><%=empleo["fechaPublicacion"]%></small>
-                                        </div>
+                <div class="row p-4">
+                    <div class="col-12 pb-3">
+                        <span>Empleos más recientes</span>
+                    </div>
+                    <%if(empleos.length > 0){%>
+                    <% empleos.forEach((empleo) =>{%>
+                    <div class="col-md-4">
+                        <a class="a-no-underline" href="/aplicacion/aplicar/<%=empleo["id"]%>">
+                            <div class="card mb-4 shadow-sm border-1">
+                                <div class="card-body">
+                                    <p class="card-text card-text-title m-0"><%=empleo["nombreEmpleo"]%></p>
+                                    <p class="card-text m-0"><%=empleo["nombreEmpresa"]%></p>
+                                    <p class="card-text m-0"><%=empleo["ubicacionEmpleo"]%></p>
+                                    <hr class="hr-card-empleo">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <small class="text-muted"><%=empleo["fechaPublicacion"]%></small>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
-                        <%})%>
-                        <%}else{%>
-                        <div class="col-12">
-                            <div class="alert alert-info" role="alert">
-                                No hay empleos registrados
                             </div>
-                        </div>
-                        <%}%>
+                        </a>
                     </div>
+                    <%})%>
+                    <%}else{%>
+                    <div class="col-12">
+                        <div class="alert alert-info" role="alert">
+                            No hay empleos registrados
+                        </div>
+                    </div>
+                    <%}%>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
