--- a/mr-jobs/views/usuario/profile.ejs
+++ b/mr-jobs/views/usuario/profile.ejs
@@ -6,7 +6,7 @@
 <h1 hidden>profile</h1>
 <div class="container">
 
-    <div class="container profileBackground">
+    <div class="container profileBackground bg-light">
         <br>
         <div class="row align-items-center flex-row-reverse">
             <div class="col-lg-6">
@@ -44,7 +44,7 @@
         <br>
     </div>
 
-    <div class="container profileBackground ">
+    <div class="container profileBackground bg-light">
         <div class="list-group">
             <br>
             <p class="card-text-title tituloHome">Experiencia</p>
@@ -69,7 +69,7 @@
 
 
 
-    <div class="container profileBackground ">
+    <div class="container profileBackground bg-light">
         <div class="list-group">
             <br>
             <p class="card-text-title tituloHome">Empleos publicados</p>
