--- a/mr-jobs/views/usuario/profile.ejs
+++ b/mr-jobs/views/usuario/profile.ejs
@@ -52,11 +52,13 @@
                 <a class="list-group-item list-group-item-action flex-column align-items-start border-1">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="color-font-profile mb-1">Trabajo como <%=value.trabajo.nombre%></h5>
+                        <%if(currentProfile == currentUser){%>
                         <small>
                             <form method="POST" action="agregarTrabajo">
                                 <button class="btn-info btn btn-size-profile">Agregar</button>
                             </form>
                         </small>
+                        <%}%>
                     </div>
                     <p class="color-font-profile mb-1"> en <%=value.trabajo.organizacion%> - <%=value.trabajo.tipo%></p>
                     <p class="color-font-profile mb-1"> desde: <%=value.anioInicio%> hasta: <%=value.anioFin%></p>
