--- a/mr-jobs/views/usuario/signup.ejs
+++ b/mr-jobs/views/usuario/signup.ejs
@@ -8,8 +8,7 @@
 
 <div class="container">
     <div class="container">
-        <h1 class="formularioTitulo"><%= existeUsuario ? 'Editar': 'Unirse'%></h1>
-
+        <br>
         <%if(existeUsuario){%>
         <%existeNombre = true%>
         <%existeApellido = true%>
@@ -24,72 +23,85 @@
                 Error: <%= error%>
             </div>
         <%}%>
-        <form action="/home/signup"
-              method="POST">
-            <div class="form-group">
-                <label for="usernameID">Username</label>
-                <input id="usernameID" type="text" name="username"
-                       class="form-control" placeholder="Nombre de usuario"
-                       >
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6 ">
+                <div class="card border-top-0 b border-left-0 border-right-0 radius-card-head">
+                    <div class="card-header rounded-top card-title-color text-center radius-card-body">
+                        <h4><strong>Unete a nosotros</strong></h4>
+                    </div>
+                    <div class="card-body px-5 py-4">
+                        <form action="/home/signup"
+                              method="POST">
+                            <div class="form-group">
+                                <label for="usernameID">Username</label>
+                                <input id="usernameID" type="text" name="username"
+                                       class="form-control" placeholder="Nombre de usuario"
+                                       >
+                            </div>
+                            <div class="form-group">
+                                <label for="correoID">Correo electrónico</label>
+                                <input id="correoID" type="email"
+                                       name="correo" class="form-control"
+                                       placeholder="Enter email"
+                                       value="<%= existeCorreo ? correo : '' %>">
+                            </div>
+                            <div class="form-group">
+                                <label for="passwordID">Contraseña</label>
+                                <input id="passwordID" type="password" name="password"
+                                       class="form-control" placeholder="Contraseña"
+                                       value="<%= existeApellido ? apellido : '' %>">
+                            </div>
+                            <div class="form-group">
+                                <label for="passwordConfirmarID">Confirmar</label>
+                                <input id="passwordConfirmarID" type="password" name="passwordConfirmar"
+                                       class="form-control" placeholder="Confirmar contraseña"
+                                       value="<%= existeApellido ? apellido : '' %>">
+                            </div>
+                            <div class="form-group">
+                                <label for="nombreID">Nombre</label>
+                                <input id="nombreID" type="text" name="nombre"
+                                       class="form-control" placeholder="Nombre"
+                                       value="<%= existeApellido ? apellido : '' %>">
+                            </div>
+                            <div class="form-group">
+                                <label for="apellidoID">Apellido</label>
+                                <input id="apellidoID" type="text" name="apellido"
+                                       class="form-control" placeholder="Apellido"
+                                       value="<%= existeApellido ? apellido : '' %>">
+                            </div>
+                            <div class="form-group">
+                                <label for="paisID">Seleccione su País/Región</label>
+                                <select class="form-control" id="paisID" name="pais">
+                                    <option>Escoja uno...</option>
+                                    <option value="Alemania">Alemania</option>
+                                    <option value="Brasil">Brasil</option>
+                                    <option value="China">China</option>
+                                    <option value="Ecuador">Ecuador</option>
+                                    <option value="España">España</option>
+                                    <option value="Estados Unidos">Estados Unidos</option>
+                                    <option value="Italia">Italia</option>
+                                    <option value="Reino Unido">Reino Unido</option>
+                                    <option value="Rusia">Rusia</option>
+                                    <option value="Tailandia">Tailandia</option>
+                                    <option value="Turquia">Turquía</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="ciudadID">Ciudad</label>
+                                <input id="ciudadID" type="text" name="ciudad"
+                                       class="form-control" placeholder="Ciudad"
+                                       value="<%= existeApellido ? apellido : '' %>">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Siguiente</button>
+                            <button type="reset" class="btn btn-primary">Limpiar Campos</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="correoID">Correo electrónico</label>
-                <input id="correoID" type="email"
-                       name="correo" class="form-control"
-                       placeholder="Enter email"
-                       value="<%= existeCorreo ? correo : '' %>">
-            </div>
-            <div class="form-group">
-                <label for="passwordID">Contraseña</label>
-                <input id="passwordID" type="password" name="password"
-                       class="form-control" placeholder="Contraseña"
-                       value="<%= existeApellido ? apellido : '' %>">
-            </div>
-            <div class="form-group">
-                <label for="passwordConfirmarID">Confirmar</label>
-                <input id="passwordConfirmarID" type="password" name="passwordConfirmar"
-                       class="form-control" placeholder="Confirmar contraseña"
-                       value="<%= existeApellido ? apellido : '' %>">
-            </div>
-            <div class="form-group">
-                <label for="nombreID">Nombre</label>
-                <input id="nombreID" type="text" name="nombre"
-                       class="form-control" placeholder="Nombre"
-                       value="<%= existeApellido ? apellido : '' %>">
-            </div>
-            <div class="form-group">
-                <label for="apellidoID">Apellido</label>
-                <input id="apellidoID" type="text" name="apellido"
-                       class="form-control" placeholder="Apellido"
-                       value="<%= existeApellido ? apellido : '' %>">
-            </div>
-            <div class="form-group">
-                <label for="paisID">Seleccione su País/Región</label>
-                <select class="form-control" id="paisID" name="pais">
-                    <option>Escoja uno...</option>
-                    <option value="Alemania">Alemania</option>
-                    <option value="Brasil">Brasil</option>
-                    <option value="China">China</option>
-                    <option value="Ecuador">Ecuador</option>
-                    <option value="España">España</option>
-                    <option value="Estados Unidos">Estados Unidos</option>
-                    <option value="Italia">Italia</option>
-                    <option value="Reino Unido">Reino Unido</option>
-                    <option value="Rusia">Rusia</option>
-                    <option value="Tailandia">Tailandia</option>
-                    <option value="Turquia">Turquía</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="ciudadID">Ciudad</label>
-                <input id="ciudadID" type="text" name="ciudad"
-                       class="form-control" placeholder="Ciudad"
-                       value="<%= existeApellido ? apellido : '' %>">
-            </div>
-            <button type="submit" class="btn btn-primary">Siguiente</button>
-            <button type="reset" class="btn btn-primary">Limpiar Campos</button>
-
-        </form>
+        </div>
+        <br>
+    </div>
     </div>
 </div>
 
